refactor: optimize imports and clean code